--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-go/image/go1.10.2.linux-amd64.tar.gz
 go/up_file_s3.go
 go/uploadsGO
+go/image/bingo
+go/image/test
+
 py/up_file_s3.py
 py/uploadsPY
+howto.txt
