--- a/py/image/Dockerfile
+++ b/py/image/Dockerfile
@@ -1,14 +1,9 @@
 # PY: display output
 
-# docker build -t local/py_faas:0.0.1 --build-arg http_p=$http_proxy .
+# docker build -t local/py_faas:0.0.1 .
 # docker run -it -v $(realpath .)/z.py:/app/z.py --env APPNAME=z.py --env PORT=1111 -p 8000:1111  local/py_faas:0.0.1
 
 FROM alpine
-
-ARG http_p
-
-ENV https_proxy $http_p
-ENV http_proxy $http_p
 
 ENV PORT 12345
 ENV APPNAME ''
@@ -25,8 +20,5 @@ WORKDIR /app
 
 ADD display_output.py display_output.py
 ADD default.py default.py
-
-ENV http_proxy ''
-ENV https_proxy ''
 
 ENTRYPOINT ./display_output.py
